test/1.2/errors/T_ENVAL.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;

attribute a {
    parameter type = "i";
    parameter configuration = "none";
}

bank b {
    group g;
}

connect c;

// Only typed, throwing methods can be used as values.
method untyped_method(x) { }
method nonthrowing_method() nothrow { }

/// WARNING WEXPERIMENTAL
trait t {
    method foo();
}

method init {
    /// ERROR ENVAL
    $a;
    /// ERROR ENVAL
    $a + 1;
    /// ERROR ENVAL
    sizeof $b.g;
    /// ERROR ENVAL
    [1, 2, 3];
    /// ERROR ENVAL
    $c;
    /// ERROR ENVAL
    [1,2,3]();
    /// ERROR ENVAL
    $untyped_method;
    /// ERROR ENVAL
    $nonthrowing_method;

    /// ERROR ENVAL
    $untyped_method([]);

    // Trait methods cannot be used as values.
    local t x;
    /// ERROR ENVAL
    x.foo;
    // No error in 1.2 (but error in 1.4)
    $dev;
}
